--- a/src/components/navbar/Navtest.css
+++ b/src/components/navbar/Navtest.css
@@ -4,7 +4,7 @@
     backdrop-filter: blur(15px);
     z-index: 2;
     position: fixed;
-    top: 90vh;
+    bottom: 0;
     width: 100%;
     padding: .7rem;
     display: flex;
@@ -32,4 +32,5 @@
     display: flex;
     justify-content: space-evenly;
     width: 70%;
+    background-color: aqua;
 }
