--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -1,112 +1,121 @@
-.btn-log{
-    width: 100%;
-    display: flex;
-    gap: 5rem;
-    margin: 0 auto;
-    justify-content: center;
-}
-.btn-log > a{
-    width: auto;
-}
-.btn-log > a > button{
-    width: 10rem;
-}
-
-.section-brand{
+.section-brand {
     width: 100%;
     background-image: url(../../assets/img-homepage.png);
     position: relative;
 }
-.brand-content{
-    background: #1d3240c2;
+
+.brand-content {
+    background: #95b8bf5e;
     width: 50%;
-    height: 80vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    justify-content: center;
+    gap: 2.5rem;
+    align-items: center;
+    text-align: center;
+    color: var(--TEXT);
+}
+.brand-content h3{
+    display: flex;
+    gap: .5rem;
+    font-weight: 500;
+}
+.brand-content h2{
+    font-weight: 700;
+}
+
+.login-form-container{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    gap: 1.5rem;
+    width: 80%;
 }
-
-.container-flex-column{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    text-align: center;
-    position: relative;
-    top: 7rem;
-}
-
-.section-brand > h1, .section-brand > h3 {
-    padding-top: 3rem;
-}
-.section-brand > h3, .section-brand > p {
-    padding: 3rem 0 3rem 0;
-    color: var(--TEXT);
-    font: var(--MEDIUM);
-}
-
-.my-card{
-    border: solid 2px var(--PRIMARY_900); /*igual*/
-    border-radius: 15px; /*igual*/
-    font:var(--REGULAR); /*igual*/
-    color: var(--TEXT_LIGHT); /*igual*/
-    width: 20rem;
-    height: 21rem;
-    padding: 1rem;
-    text-align: center;
-    flex-wrap: wrap;
-    transition: var(--transition);
-}
-.my-card:hover{
-    box-shadow: 2px 2px 10px var(--PRIMARY_700);
-}
-.section-info{
+.login-form-container  input, .login-form-container button {
     width: 100%;
-    padding: .7rem;
+}
+.login-form-container button {
+    width: 60%;
+}
+
+.footer-section{
+    height: 15vh;
+    text-align: center;
+    padding-top: 7vh;
+}
+.footer-section h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+.fs-2{
+    margin-bottom: 4.5rem;
+}
+
+
+.main-section{
+    background: rgb(1,17,64);
+    background: linear-gradient(180deg, rgba(1, 17, 64, 0.524) 10%, rgba(4,157,191,0.47) 90%);
+}
+
+.section-info{
     display: flex;
     justify-content: space-evenly;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     flex-wrap: wrap;
+    padding-bottom: 2rem;
+}
+
+.my-card {
+    border: solid 2px var(--PRIMARY_700);
+    border-radius: 15px;
+    width: 20rem;
+    height: max-content;
+    padding: 1rem;
+    text-align: justify;
+    transition: var(--transition);
+}
+.my-card:hover {
+    box-shadow: 2px 2px 10px var(--PRIMARY_700);
+}
+
+.my-card img{
+    position: relative;
+    object-fit: cover;
+    width: 19.8rem;
+    transform: translate(-1rem, -1rem);
+    border-radius: 15px 15px 0 0;
+}
+.my-card h1, .my-card h2{
     text-align: center;
+    margin-bottom: .5rem;
 }
 
-.my-icon{
-    width: 10rem;
-    height: 10rem;
+.my-icon {
+    width: 70%;
+    height: 70%;
 }
 
-.img-card{
-    /*width:20rem;*/
-    width: 40%;
-    border-radius: 2rem 2rem 0 0;
+@media screen and (max-width:750px) {
+    .footer-section {
+        padding-top: 3vh;
+    }
+    .footer-section h1{
+        font-size: 1.2rem;
+    }
+    .footer-section h1 .footer-icon{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 830px) {
-    .brand-content{
+    .brand-content {
         width: 100%;
         padding: 0 .2rem;
     }
-}
-@media screen and (max-width: 425px) {
-    .btn-log{
-        gap: 2rem;
-    }
-    
-    .btn-log > a > button{
-        width: 8rem;
-    }
-}
-
-.section-cards{
-    background: linear-gradient( 95deg var(--PRIMARY_900 var(--PRIMARY_800)));
-}
-.cards-content{
-    width: 20rem;
-    padding: .5rem;
-    border: solid 2px var(--PRIMARY_900); /*igual*/
-    border-radius: 15px; /*igual*/
 }
