--- a/src/routes/register/Register.css
+++ b/src/routes/register/Register.css
@@ -1,53 +1,91 @@
-.login{
+.register{
     display: flex;
     justify-content: center;
-    align-content: center;
-    gap: 1.5rem;
-    width: 100vw;
-    height: max-content;
-    margin: 0 auto 2rem auto;
+    align-items: center;
+    height: 100vh;
+    padding: 0 2rem;
 }
 
-.container-log{
+.brand-img-register{
+    background-color: var(--PRIMARY_600);
+    width: 50%;
+    height: 70vh;
+    border-radius: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+.brand-img-register img{
+    width: 75%;
+    object-fit: cover;
+}
+
+.register-container{
+    background: none;
+    width: 50%;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    width: 50%;
-    height: max-content;
+    gap: 2.5rem;
     text-align: center;
-    border: solid 2px var(--PRIMARY_900); 
-    border-radius: 15px;
-    padding-bottom: 1rem;
+    color: var(--TEXT_LIGHT);
 }
 
-.um-so{
+.register-container input{
+    color: var(--TEXT_LIGHT);
+}
+.register-container button:hover{
+    color: var(--TEXT_LIGHT);
+}
+
+.register-container h1{
+    color: var(--PRIMARY_600);
+}
+
+.register-container h3{
+    display: flex;
+    gap: .5rem;
+    font-weight: 500;
+}
+.register-container h3 a:hover{
+    color: var(--TEXT_LIGHT);
+}
+
+.register-form-container{
     display: flex;
     flex-direction: column;
-    gap: .5rem;
-    margin-bottom: 1rem;
-    width: auto;
-}
-
-.my-input{
-    width: 75%;
-    height: 2rem;
-    font: var(--LIGHT_ITALIC);
-    color: var(--PRIMARY_700);
-    margin: 0 2rem;
-    padding: 1rem;
-    background-color: var(--BACKGROUND-DARK-DARKER);
-
-    border-radius: 10px;
-    border: solid 2px var(--PRIMARY_800);
-}
-
-.top-card{
-    background-color: var(--PRIMARY_900);
-    color: var(--TEXT_LIGHT);
-    padding: 1.3rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
     width: 100%;
-    height: 20%;
-    border-radius: 12px 12px 0 0;
+}
+.register-form-container  input, .register-form-container button {
+    width: 100%;
+}
+.register-form-container button {
+    width: 45%;
+}
+
+
+
+@media screen and (max-width: 970px) {
+    .brand-img-register{
+        display: none;
+    }
+    .register-container{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .register-form-container button {
+        width: max-content;
+        padding: auto 1rem;
+    }
+    .register-container h3 {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
