modificado rotas e componentes

--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -30,6 +30,11 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    flex-wrap: wrap;
+    position: relative;
+    content: normal;
+    font: var(--REGULAR);
+    line-height: .6rem;
 }
 
 .img-content {
