--- a/src/routes/register/Register.css
+++ b/src/routes/register/Register.css
@@ -13,12 +13,13 @@
     border-radius: 5%;
     display: flex;
     justify-content: center;
+    padding: 1.5rem 0;
 }
 
 .brand-img-register img{
-    width: 75%;
     object-fit: cover;
 }
+
 
 .register-container{
     background: none;
