--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,28 +1,64 @@
-/*apartir dos 830px nav vira toglee*/
 
-nav {
+.navbar-toggle{
+    display: none;
+}
+
+.navbar {
     background: #22457357;
-    width: max-content;
-    height: 100vh;
-    display: block;
+    width: 100%;
+    height: 8vh;
     padding: 1rem 5rem;
     z-index: 2;
     position: fixed;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 2rem;
     /*apartir dos 770px left fica 20%*/
     /*apartir dos 1000px left fica 15%*/
-    left: 10%;
-    transform: translateX(-50%);
+    /* left: 50%;
+    transform: translateX(-50%); */
     top: 0;
     backdrop-filter: blur(15px);
 }
 
-nav li {
-    background: var(--PRIMARY_600);
+.nav-menu-items {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* width: 70%; */
+}
+
+.nav-text {
+    /* background: var(--PRIMARY_600); */
     padding: 0.9rem;
     border-radius: 5rem;
     display: flex;
+    align-items: center;
     gap: .6rem;
-    color: var(--SECONDARY_900);
     font-size: 1.1rem;
-    margin-top: 1.5rem;
+}
+
+.nav-text a{
+    color: var(--TEXT_LIGHT);
+    display: flex;
+    gap: .6rem;;
+    font-size: 1.1rem;
+}
+
+.nav-text a:hover{
+    color: var(--SECONDARY_800);
+    display: flex;
+    gap: .6rem;;
+    font-size: 1.1rem;
+}
+ 
+
+@media screen and (max-width: 830px) {
+    .navbar{
+        left: -100%;
+    }
+    .navbar-toggle{
+        display: block;
+    }
 }
