--- a/src/components/input/Input.css
+++ b/src/components/input/Input.css
@@ -17,7 +17,7 @@
     background: none;
     padding-left: .7rem;
     font: var(--LIGHT_ITALIC);
-    color: var(--TEXT);
+    color: var(--TEXT_LIGHT);
 }
 
 .input-outline-primary{
