--- a/src/routes/explore/Explore.css
+++ b/src/routes/explore/Explore.css
@@ -1,27 +1,38 @@
-.header-main{
-    background-color: var(--BACKGROUND_DARK);
+.header-main-filter{
+    width: 100%;
+    margin-top: 8vh;
+    display: flex;
+    justify-content: space-around;
     border-bottom: 1px solid var(--TEXT_LIGHT);
+    padding: 1rem 2rem;
+    position: fixed;
 }
 
-.header-content-main{
-    display: flex;
-    gap: 2rem; 
+.filter-input-text, .filter-input-select{
+    width: 50%;
+}
+
+.filter-input-select select{
+    background: none;
+    border: 2px solid var(--SECONDARY_800);
+    padding: .7rem;
+    border-radius: 1rem;
     width: 80%;
-    background-color: blue;
-}
-
-.logo-header-main{
-    width: 30px;
-    height: 30px;
-}
-
-.search-bar{
-    display: flex;
-    align-items: center;
-}
-.search-bar .search-bar-icon{
-    margin-bottom: 10px;
-}
-.search-bar input{
+    font: var(--LIGHT_ITALIC);
     color: var(--TEXT_LIGHT);
+}
+
+.filter-input-select select option{
+    background: none;
+    padding: .7rem;
+    font: var(--LIGHT_ITALIC);
+    color: var(--TEXT_LIGHT);
+}
+
+.posts-container{
+    margin-top: 22vh;
+    padding: .5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
