--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,63 @@ a:hover {
   display: block;
 }
 
+
+/*==============================
+        POPUP STYLE
+==============================*/
+
+.popup-menu {
+  background: #22457357;
+  height: 100vh;
+  width: 100%;
+  padding: 0 5rem;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  backdrop-filter: blur(15px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+  /*you can hide it with left: -100%*/
+  left: -100%;
+  transition: var(--transition);
+}
+
+.popup-menu-active {
+  left: 0;
+  transition: var(--transition);
+}
+
+.popup-container{
+  width: fit-content;
+  height: max-content;
+  background-color: var(--BACKGROUND_DARK);
+  border-radius: 15px;
+  padding: .5rem;
+  box-shadow: 1px 1px 10px var(--SECONDARY_700);
+}
+
+.popup-content{
+  position: relative;
+  top: 30%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.close-popup{
+  position: relative;
+  top: 0;
+  right: 0;
+  margin: .5rem .5rem 0 0 ;
+}
+
+
 /*===============
   MEDIA QUERYS
 =================*/
