--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -8,7 +8,7 @@
 .header-post {
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: space-between;
     gap: 1rem;
 }
 
@@ -21,10 +21,6 @@
     align-items: center;
     justify-content: center;
     object-fit: cover;
-}
-
-.options-dots{
-    justify-self: flex-end;
 }
 
 .main-content {
