--- a/src/routes/explore/Explore.css
+++ b/src/routes/explore/Explore.css
@@ -53,7 +53,7 @@
 }
 
 .create-post-container .popup-container{
-    width: 90vw;
+    height: 80vw;
 }
 .create-post-container .popup-container .ta-popup-container{
     width: 100%;
