--- a/src/routes/profile/Profile.css
+++ b/src/routes/profile/Profile.css
@@ -37,9 +37,26 @@
     padding: 1rem 2rem;
 }
 
+
+.section-posts{
+    margin-top: 10%;
+}
+
 .profile-posts{
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+}
+
+
+@media screen and (max-width: 800px) {
+    .profile-container{
+        padding: .5rem;
+    }
+
+    .img-background{
+        width: 15rem;
+        height: 15rem;
+    }
 }
