--- a/src/routes/explore/Explore.css
+++ b/src/routes/explore/Explore.css
@@ -1,62 +1,68 @@
-.header-main-filter {
+.header-content {
     width: 100%;
-    margin-top: 10vh;
+    height: 8vh;
     display: flex;
     justify-content: space-around;
-    border-bottom: 1px solid var(--TEXT_LIGHT);
-    padding: 0 2rem;
-    /* position: fixed; */
+    border-bottom: 1px solid var(--SECONDARY_900);
+    position: fixed;
+    top: 10vh;
+    z-index: 2;
 }
 
-.filter-input-text,
-.filter-input-select {
-    width: 50%;
-    height: 3rem;
-    margin-bottom: .8rem;
-}
-
-.filter-input-select select {
-    background: none;
-    border: 2px solid var(--SECONDARY_800);
-    padding: .7rem;
-    border-radius: 1rem;
+.menu-item-category {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    text-justify: auto;
+    background-color: var(--SECONDARY_900);
     font: var(--LIGHT_ITALIC);
-    color: var(--TEXT_LIGHT);
+    gap: 1px;
 }
 
-.filter-input-select select option {
+.menu-item-category .item-category {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--SECONDARY_800);
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    transition: var(--transition);
+}
+.menu-item-category .item-category:hover {
     background: none;
-    padding: .7rem;
-    font: var(--LIGHT_ITALIC);
-    color: var(--TEXT_LIGHT);
+}
+.menu-item-category .item-category-selected {
+    background: none;
 }
 
 .posts-container {
-    margin-top: 10vh;
+    margin-top: 20vh;
     padding: .5rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.header-main-filter .btn-create{
+.header-content .btn-create {
     position: fixed;
     bottom: 0;
     right: 0;
     margin: 0 1rem 1rem 0;
 }
-.header-main-filter button:hover{
+
+.header-content button:hover {
     color: var(--TEXT_LIGHT);
     background-color: var(--SECONDARY_900);
 }
 
-.create-post-container .popup-container{
-    height: 80vw;
+.create-post-container .popup-container {
+    height: 70vw;
 }
-.create-post-container .popup-container .ta-popup-container{
+
+.create-post-container .popup-container .ta-popup-container {
     width: 100%;
+    height: 20%;
     background: none;
     border: 1px solid var(--SECONDARY_800);
     color: var(--TEXT_LIGHT);
@@ -64,7 +70,8 @@
     padding: .5rem;
     border-radius: 5px;
 }
-.create-post-container .popup-container input{
+
+.create-post-container .popup-container input {
     color: var(--TEXT_LIGHT);
 }
 
