--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -24,18 +24,19 @@
 }
 
 .main-content {
-    text-align: justify;
-    padding: 1.5rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-    position: relative;
-    content: normal;
+    background-color: aqua;
+    width: 100%;
+    height: 30vh;
     font: var(--REGULAR);
     line-height: .6rem;
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+}
+.main-content .content-container{
+    background-color: whitesmoke;
+    position: absolute;
+    width: 300px;
 }
 
 .img-content {
