--- a/src/routes/profile/Profile.css
+++ b/src/routes/profile/Profile.css
@@ -4,20 +4,20 @@
 
 .section-profile{
     margin-top: 2.5rem;
-}
-
-.profile-container{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 1.2rem;
+    padding: 0 2rem;
+}
+
+.profile-container{
 }
 
 .img-background{
     background-color: var(--PRIMARY_600);
-    width: 20rem;
-    height: 20rem;
+    width: 10rem;
+    height: 10rem;
     border-radius: 50%;
 
     display: flex;
@@ -30,10 +30,13 @@
 }
 
 .bios{
+    background-color: tomato;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
-    margin-top: 5vh;
+    margin-top: 1rem;
+    gap: 1.5rem;
     padding: 1rem 2rem;
 }
 
@@ -41,13 +44,11 @@
 .section-posts{
     margin-top: 10%;
 }
-
-.profile-posts{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+.section-posts h1{
+    color: var(--TEXT_LIGHT);
+    margin: 3rem;
 }
+
 
 
 @media screen and (max-width: 800px) {
