--- a/src/routes/profile/Profile.css
+++ b/src/routes/profile/Profile.css
@@ -1,20 +1,40 @@
-.Profile{
+.Profile {
     margin-bottom: 3rem;
 }
 
-.section-profile{
-    margin-top: 2.5rem;
+.section-profile {
+    margin-top: 15vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1.2rem;
     padding: 0 2rem;
 }
 
-.profile-container{
+.header-button-profile {
+    height: 3rem;
+    width: 3rem;
+    position: absolute;
+    top: 13vh;
+    right: 2.5rem;
+    color: var(--TEXT_LIGHT);
 }
 
-.img-background{
+.header-button-profile .header-profile-icon {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.header-button-profile .header-profile-icon:hover {
+    color: var(--SECONDARY_800);
+}
+
+.profile-container {}
+
+.img-background {
     background-color: var(--PRIMARY_600);
     width: 10rem;
     height: 10rem;
@@ -24,13 +44,13 @@
     align-items: center;
     justify-content: center;
 }
-.avatar{
+
+.avatar {
     border-radius: 50%;
     object-fit: cover;
 }
 
-.bios{
-    background-color: tomato;
+.bios {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -41,23 +61,34 @@
 }
 
 
-.section-posts{
+.section-posts {
     margin-top: 10%;
 }
-.section-posts h1{
+
+.section-posts h1 {
     color: var(--TEXT_LIGHT);
     margin: 3rem;
+    display: flex;
+    align-items: center;
+    gap: 3rem;
 }
 
 
 
 @media screen and (max-width: 800px) {
-    .profile-container{
+    .profile-container {
         padding: .5rem;
     }
 
-    .img-background{
+    .img-background {
         width: 15rem;
         height: 15rem;
     }
+
+    .header-button-profile {
+        right: 1.5rem;
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
 }
