--- a/src/routes/login/Login.css
+++ b/src/routes/login/Login.css
@@ -1,83 +1,76 @@
-.login{
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    width: 100vw;
-    margin: 0 auto 2rem auto;
+.section-brand {
+    width: 100%;
+    background-image: url(../../assets/img-homepage.png);
+    position: relative;
 }
 
-.container-log{
+.brand-content {
+    background: #95b8bf89;
+    width: 50%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2.5rem;
+    align-items: center;
+    text-align: center;
+    color: var(--TEXT);
+}
+
+.brand-content h3 {
+    display: flex;
+    gap: .5rem;
+    font-weight: 500;
+}
+
+.brand-content h1 {
+    font-size: 2rem;
+    color: var(--TEXT);
+}
+
+.brand-content h2 {
+    font-weight: 700;
+}
+
+.login-form-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
-    width: 50%;
-    height: 20rem;
-    text-align: center;
-    border: solid 2px var(--PRIMARY_900); 
-    border-radius: 15px;
-    padding-bottom: 1rem;
-}
-
-.um-so{
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    margin-bottom: 1rem;
-}
-
-.my-input{
-    width: 75%;
-    height: 2rem;
-    font: var(--LIGHT_ITALIC);
-    color: var(--PRIMARY_700);
-    margin: 0 2rem;
-    padding: 1rem;
-    background-color: var(--BACKGROUND-DARK-DARKER);
-
-    border-radius: 10px;
-    border: solid 2px var(--PRIMARY_800);
-}
-
-.top-card{
-    background-color: var(--PRIMARY_900);
-    color: var(--TEXT_LIGHT);
-    padding: 1.3rem;
-    width: 100%;
-    height: 20%;
-    border-radius: 12px 12px 0 0;
-}
-.top-card-fg{
-    position: relative;
-    top: -10px;
-}
-
-
-
-.btn-face, .btn-google{
-    height: 5.2rem;
+    gap: 1.5rem;
     width: 80%;
-    top: 218px;
-    margin: 0 3rem;
-    padding: 1rem;
-
-    border-radius: 15px;
-    font: var(--MEDIUM);
-    transition: var(--transition);
 }
 
-.btn-face{
-    background-color: var(--SECONDARY_900);
-    color: var(--TEXT_LIGHT);
-}
-.btn-google{
-    background-color: var(--BARCKGROUND_LIGHT);
-    color: var(--TEXT);
+.login-form-container input,
+.login-form-container button {
+    width: 100%;
 }
 
-.btn-face:hover, .btn-google:hover{
-    box-shadow: 2px 2px 10px var(--SECONDARY_800);
+.login-form-container button {
+    width: 60%;
+}
+
+.footer-section {
+    height: 15vh;
+    text-align: center;
+    padding-top: 7vh;
+}
+
+.footer-section h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.fs-2 {
+    margin-bottom: 4.5rem;
+}
+
+
+@media screen and (max-width: 830px) {
+    .brand-content {
+        width: 100%;
+        padding: 0 .2rem;
+    }
 }
