--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -61,3 +61,31 @@
 }
 
 /* --------end of content---------- */
+
+.header-show-more .show-more-content {
+    background-color: var(--BACKGROUND_DARK);
+    border-radius: 1rem;
+    padding: .5rem;
+    position: absolute;
+    right: 2rem;
+    z-index: 2;
+    display: none;
+    transition: var(--transition);
+}
+
+.header-show-more .show-more-content li {
+    border-bottom: 1px solid var(--SECONDARY_900);
+    padding: .2rem;
+    border-radius: .2rem;
+    transition: var(--transition);
+}
+
+.header-show-more .show-more-content li:hover {
+    background-color: var(--PRIMARY_700);
+}
+
+.active {
+    display: block;
+}
+
+/* --------end of show-more---------- */
